# kotanima_content

./: .env.example  .flake8  .gitignore  DEPLOYMENT.md  LICENSE.md  README.md  backup.sh  backup.sh.example  cron_downloader.sh  cron_scrape.sh  cron_vk_scheduler.sh  pyproject.toml  requirements.txt  restore_db.sh  scrape_reddit.py  yandex_backup.py
sh_scripts/: cron_downloader.sh  cron_metadata.sh  cron_scrape.sh  cron_vk_scheduler.sh  restore_db.sh
sql_commands/: anime.sql  anime_characters.sql  index_of_subarray.sql  slugify.sql  slugify_array.sql
src/: add_metadata.py  detect_anime.py  detect_character.py  downloader.py  extra_tags.py  final_check_detect_against_db.py  gallery_dl_helper.py  image_similarity.py  img_helper.py  models.py  postgres.py  source_search.py  tags_resolver.py  verify_file_integrity.py  vk_helper.py  vk_scheduler.py
src/anime_db/: update_anime_chars.py  update_anime_with_jikan.py  update_anime_with_shikimori.py  update_non_anime.py  update_non_anime_chars.py  update_top_anime.py
tests/: test_detect_anime.py  test_detect_character.py  test_extra_tags.py  test_tags_resolver.py  test_vk_scheduler.py
